# nook_camp

./: .gitignore  CREDITS.md  Cargo.toml  Dioxus.toml  README.md  build.gradle.kts  settings.gradle.kts  sonar-project.properties
.github/actions/gradle-setup/: action.yml
.github/workflows/: ci.yml
androidApp/: build.gradle.kts
androidApp/src/main/kotlin/com/example/kncr/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml
assets/: tailwind.css
assets/styles/: blocking.css  hours_box.css  main.css  volume.css
desktopApp/: build.gradle.kts
desktopApp/src/main/kotlin/com/example/kncr/: main.kt
docs/: planning.md
gradle/: libs.versions.toml
shared/: build.gradle.kts
shared/src/androidHostTest/kotlin/com/example/kncr/: SharedLogicAndroidHostTest.kt
shared/src/androidMain/kotlin/com/example/kncr/: Platform.android.kt
shared/src/commonMain/kotlin/com/example/kncr/: App.kt  Greeting.kt  GreetingUtil.kt  Platform.kt
shared/src/commonTest/kotlin/com/example/kncr/: SharedCommonTest.kt
shared/src/jsMain/kotlin/com/example/kncr/: Platform.js.kt
shared/src/jvmMain/kotlin/com/example/kncr/: Platform.jvm.kt
shared/src/jvmTest/kotlin/com/example/kncr/: SharedLogicDesktopTest.kt
shared/src/wasmJsMain/kotlin/com/example/kncr/: Platform.wasmJs.kt
src/: main.rs
src/components/: hours.rs  hours_box.rs  icon.rs  mod.rs  playlist_selector.rs  volume.rs
src/data/: VolumeUnit.rs  icon_type.rs  mod.rs  volume_type.rs  volume_unit.rs
webApp/src/webMain/kotlin/com/example/kncr/: main.kt
webApp/src/webMain/resources/: index.html
(+17 files in other folders)
